added file opening and search commands

--- a/README.org
+++ b/README.org
@@ -10,13 +10,22 @@
 * An Emacs Course
 ** Setup
    The Emacs configuration for the course you can find at
-   https://github.com/dfeich/emacs-course-and-config.
-
-   It is best that you fork this repository and then clone your
-   forked copy to a user account's =~/emacs.d= directory on your
+   https://github.com/dfeich/emacs-course-and-config. 
+   It is best that you fork that repository and then clone your
+   forked copy to your (or a test user's) account's =~/emacs.d= directory on your
    machine.
 
-   I use Emacs version 26.3 for this course.
+   This repository contains the course in the form of Org mode task files.
+   It should be checked out into the =~/Documents= folder of your account.
+   The emacs configuration for the course contains settings that expect to
+   find the files under =~/Documents/orgcourse=. If you check out to another
+   location, you need to adapt the configuration.
+
+   When you start Emacs with the new configuration for the first time, it
+   will download all the missing packages from GNU, MELPA, and Org. This
+   may take some minutes.
+   
+   I use Emacs version 26.3 and Org version 9.x for this course.
 
 ** Introduction
 
@@ -64,7 +73,7 @@
   
 ** Planning of learning stages
    This is what I am planning to cover. Let's see whether I'll be able to
-   pull throgh...
+   pull through...
 
    The sequence beyond step 1 is up to change... I will teach a small
    number of work colleagues in this first round. I'll adapt to the
